--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Control del LED</title>
+  <title>Control del LED casa</title>
   <script>
     function toggleLED(action) {
   fetch('http://192.168.1.8/led?action=' + action)
