--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Control del LED casa</title>
   <script>
     function toggleLED(action) {
-      fetch('http://192.168.1.8/led?action=' + action)  // Cambiado a http en lugar de https
+      fetch('http://192.168.1.8/led?action=' + action)  // Cambiar a http
         .then(response => {
           if (!response.ok) {
             throw new Error('Error en la solicitud');
@@ -15,29 +14,20 @@
           return response.text();
         })
         .then(data => {
-          console.log(data);
-          console.log(('LED ' + action));
+          document.getElementById('status').innerHTML = "LED " + action + " exitosamente.";
+          
         })
         .catch(error => {
-          console.error('Error:', error);
+          document.getElementById('status').innerHTML = "Error al conectar con el servidor.";
+          
         });
     }
-
-    /* function toggleLED(action) {
-      fetch(`http://192.168.1.8/led?action=${action}`)
-        .then(response => response.text())
-        .then(data => {
-          document.getElementById('status').innerHTML = data;
-        });
-    } */
   </script>
 </head>
-
 <body>
   <h1>Control del LED en ESP32</h1>
   <button onclick="toggleLED('on')">Encender LED</button>
   <button onclick="toggleLED('off')">Apagar LED</button>
   <p id="status"></p>
 </body>
-
 </html>
